[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Hud.gd" type="Script" id=1]

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 20.0
margin_bottom = 40.0
text = "0"
align = 1
valign = 1

[node name="HighScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 4.22623
margin_right = 0.773682
margin_bottom = 19.2262
text = "Score"
valign = 1

[node name="LifeLabel" type="Label" parent="."]
margin_top = 20.0
margin_right = 160.0
margin_bottom = 40.0
text = "3"
align = 1
valign = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 220.0
margin_bottom = 294.0
align = 1
